# odd-even-game

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  ReadMe.md  mkdocs.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake.yml  gendocs.yml  python.yml
docs/: Doxyfile  how-to-play.md  index.md  setup.md
include/: dog.h
src/: com.py  dog.cpp  logic.py  main.cpp  main.py  toss.py  venue.py
tests/: CMakeLists.txt  test.cpp  test_answer.py
